--- a/notebooks/server.ipynb
+++ b/notebooks/server.ipynb
@@ -9,9 +9,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-03-12 15:50:40,533\tINFO util.py:154 -- Missing packages: ['ipywidgets']. Run `pip install -U ipywidgets`, then restart the notebook server for rich notebook output.\n",
-      "/Users/rasswanths/openmined/flwr/.venv/lib/python3.12/site-packages/pydantic/_internal/_generate_schema.py:297: PydanticDeprecatedSince20: `json_encoders` is deprecated. See https://docs.pydantic.dev/2.10/concepts/serialization/#custom-serializers for alternatives. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.10/migration/\n",
-      "  warnings.warn(\n"
+      "/Users/rasswanths/openmined/flwr/.venv/lib/python3.12/site-packages/pydantic/_internal/_generate_schema.py:780: PydanticDeprecatedSince20: `__get_validators__` is deprecated and will be removed, use `__get_pydantic_core_schema__` instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.10/migration/\n",
+      "  warn(\n"
      ]
     }
    ],
@@ -68,10 +67,19 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m2025-03-13 12:43:14.687\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msyft_flwr.driver\u001b[0m:\u001b[36m__init__\u001b[0m:\u001b[36m34\u001b[0m - \u001b[1mInitializing SyftDriver\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "run = Run.create_empty(run_id=1234)\n",
-    "syft_driver = SyftDriver(run=run)"
+    "syft_driver = SyftDriver()\n",
+    "syft_driver.set_run(run)"
    ]
   },
   {
@@ -96,6 +104,26 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "[35]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "syft_driver.get_node_ids()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
@@ -116,10 +144,10 @@
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m updated_context = \u001b[43mrun_server\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m      2\u001b[39m \u001b[43m    \u001b[49m\u001b[43mdriver\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43msyft_driver\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      3\u001b[39m \u001b[43m    \u001b[49m\u001b[43mcontext\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mcontext\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      4\u001b[39m \u001b[43m    \u001b[49m\u001b[43mloaded_server_app\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43mapp\u001b[49m\u001b[43m \u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      5\u001b[39m \u001b[43m    \u001b[49m\u001b[43mserver_app_dir\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43m./examples/quickstart\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\n\u001b[32m      6\u001b[39m \u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/openmined/flwr/.venv/lib/python3.12/site-packages/flwr/server/run_serverapp.py:63\u001b[39m, in \u001b[36mrun\u001b[39m\u001b[34m(driver, context, server_app_dir, server_app_attr, loaded_server_app)\u001b[39m\n\u001b[32m     60\u001b[39m server_app = _load()\n\u001b[32m     62\u001b[39m \u001b[38;5;66;03m# Call ServerApp\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m63\u001b[39m \u001b[43mserver_app\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdriver\u001b[49m\u001b[43m=\u001b[49m\u001b[43mdriver\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcontext\u001b[49m\u001b[43m=\u001b[49m\u001b[43mcontext\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     65\u001b[39m log(DEBUG, \u001b[33m\"\u001b[39m\u001b[33mServerApp finished running.\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     66\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m context\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/openmined/flwr/.venv/lib/python3.12/site-packages/flwr/server/server_app.py:120\u001b[39m, in \u001b[36mServerApp.__call__\u001b[39m\u001b[34m(self, driver, context)\u001b[39m\n\u001b[32m    118\u001b[39m         \u001b[38;5;28mself\u001b[39m._strategy = components.strategy\n\u001b[32m    119\u001b[39m         \u001b[38;5;28mself\u001b[39m._client_manager = components.client_manager\n\u001b[32m--> \u001b[39m\u001b[32m120\u001b[39m     \u001b[43mstart_driver\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    121\u001b[39m \u001b[43m        \u001b[49m\u001b[43mserver\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_server\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    122\u001b[39m \u001b[43m        \u001b[49m\u001b[43mconfig\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_config\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    123\u001b[39m \u001b[43m        \u001b[49m\u001b[43mstrategy\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_strategy\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    124\u001b[39m \u001b[43m        \u001b[49m\u001b[43mclient_manager\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_client_manager\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    125\u001b[39m \u001b[43m        \u001b[49m\u001b[43mdriver\u001b[49m\u001b[43m=\u001b[49m\u001b[43mdriver\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    126\u001b[39m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    127\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m\n\u001b[32m    129\u001b[39m \u001b[38;5;66;03m# New execution mode\u001b[39;00m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/openmined/flwr/.venv/lib/python3.12/site-packages/flwr/server/compat/app.py:87\u001b[39m, in \u001b[36mstart_driver\u001b[39m\u001b[34m(driver, server, config, strategy, client_manager)\u001b[39m\n\u001b[32m     82\u001b[39m thread, f_stop = start_update_client_manager_thread(\n\u001b[32m     83\u001b[39m     driver, initialized_server.client_manager()\n\u001b[32m     84\u001b[39m )\n\u001b[32m     86\u001b[39m \u001b[38;5;66;03m# Start training\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m87\u001b[39m hist = \u001b[43mrun_fl\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m     88\u001b[39m \u001b[43m    \u001b[49m\u001b[43mserver\u001b[49m\u001b[43m=\u001b[49m\u001b[43minitialized_server\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     89\u001b[39m \u001b[43m    \u001b[49m\u001b[43mconfig\u001b[49m\u001b[43m=\u001b[49m\u001b[43minitialized_config\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     90\u001b[39m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     92\u001b[39m \u001b[38;5;66;03m# Terminate the thread\u001b[39;00m\n\u001b[32m     93\u001b[39m f_stop.set()\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m updated_context = \u001b[43mrun_server\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m      2\u001b[39m \u001b[43m    \u001b[49m\u001b[43mdriver\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43msyft_driver\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      3\u001b[39m \u001b[43m    \u001b[49m\u001b[43mcontext\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mcontext\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      4\u001b[39m \u001b[43m    \u001b[49m\u001b[43mloaded_server_app\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43mapp\u001b[49m\u001b[43m \u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      5\u001b[39m \u001b[43m    \u001b[49m\u001b[43mserver_app_dir\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43m./examples/quickstart\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\n\u001b[32m      6\u001b[39m \u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/openmined/flwr/.venv/lib/python3.12/site-packages/flwr/server/run_serverapp.py:62\u001b[39m, in \u001b[36mrun\u001b[39m\u001b[34m(driver, context, server_app_dir, server_app_attr, loaded_server_app)\u001b[39m\n\u001b[32m     59\u001b[39m server_app = _load()\n\u001b[32m     61\u001b[39m \u001b[38;5;66;03m# Call ServerApp\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m62\u001b[39m \u001b[43mserver_app\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdriver\u001b[49m\u001b[43m=\u001b[49m\u001b[43mdriver\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcontext\u001b[49m\u001b[43m=\u001b[49m\u001b[43mcontext\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     64\u001b[39m log(DEBUG, \u001b[33m\"\u001b[39m\u001b[33mServerApp finished running.\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     65\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m context\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/openmined/flwr/.venv/lib/python3.12/site-packages/flwr/server/server_app.py:129\u001b[39m, in \u001b[36mServerApp.__call__\u001b[39m\u001b[34m(self, driver, context)\u001b[39m\n\u001b[32m    127\u001b[39m         \u001b[38;5;28mself\u001b[39m._strategy = components.strategy\n\u001b[32m    128\u001b[39m         \u001b[38;5;28mself\u001b[39m._client_manager = components.client_manager\n\u001b[32m--> \u001b[39m\u001b[32m129\u001b[39m     \u001b[43mstart_driver\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    130\u001b[39m \u001b[43m        \u001b[49m\u001b[43mserver\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_server\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    131\u001b[39m \u001b[43m        \u001b[49m\u001b[43mconfig\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_config\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    132\u001b[39m \u001b[43m        \u001b[49m\u001b[43mstrategy\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_strategy\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    133\u001b[39m \u001b[43m        \u001b[49m\u001b[43mclient_manager\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_client_manager\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    134\u001b[39m \u001b[43m        \u001b[49m\u001b[43mdriver\u001b[49m\u001b[43m=\u001b[49m\u001b[43mdriver\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    135\u001b[39m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    136\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m\n\u001b[32m    138\u001b[39m \u001b[38;5;66;03m# New execution mode\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/openmined/flwr/.venv/lib/python3.12/site-packages/flwr/server/compat/app.py:90\u001b[39m, in \u001b[36mstart_driver\u001b[39m\u001b[34m(driver, server, config, strategy, client_manager)\u001b[39m\n\u001b[32m     87\u001b[39m c_done.wait()\n\u001b[32m     89\u001b[39m \u001b[38;5;66;03m# Start training\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m90\u001b[39m hist = \u001b[43mrun_fl\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m     91\u001b[39m \u001b[43m    \u001b[49m\u001b[43mserver\u001b[49m\u001b[43m=\u001b[49m\u001b[43minitialized_server\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     92\u001b[39m \u001b[43m    \u001b[49m\u001b[43mconfig\u001b[49m\u001b[43m=\u001b[49m\u001b[43minitialized_config\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     93\u001b[39m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     95\u001b[39m \u001b[38;5;66;03m# Terminate the thread\u001b[39;00m\n\u001b[32m     96\u001b[39m f_stop.set()\n",
       "\u001b[36mFile \u001b[39m\u001b[32m~/openmined/flwr/.venv/lib/python3.12/site-packages/flwr/server/server.py:492\u001b[39m, in \u001b[36mrun_fl\u001b[39m\u001b[34m(server, config)\u001b[39m\n\u001b[32m    487\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mrun_fl\u001b[39m(\n\u001b[32m    488\u001b[39m     server: Server,\n\u001b[32m    489\u001b[39m     config: ServerConfig,\n\u001b[32m    490\u001b[39m ) -> History:\n\u001b[32m    491\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"Train a model on the given server and return the History object.\"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m492\u001b[39m     hist, elapsed_time = \u001b[43mserver\u001b[49m\u001b[43m.\u001b[49m\u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    493\u001b[39m \u001b[43m        \u001b[49m\u001b[43mnum_rounds\u001b[49m\u001b[43m=\u001b[49m\u001b[43mconfig\u001b[49m\u001b[43m.\u001b[49m\u001b[43mnum_rounds\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtimeout\u001b[49m\u001b[43m=\u001b[49m\u001b[43mconfig\u001b[49m\u001b[43m.\u001b[49m\u001b[43mround_timeout\u001b[49m\n\u001b[32m    494\u001b[39m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    496\u001b[39m     log(INFO, \u001b[33m\"\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    497\u001b[39m     log(INFO, \u001b[33m\"\u001b[39m\u001b[33m[SUMMARY]\u001b[39m\u001b[33m\"\u001b[39m)\n",
       "\u001b[36mFile \u001b[39m\u001b[32m~/openmined/flwr/.venv/lib/python3.12/site-packages/flwr/server/server.py:115\u001b[39m, in \u001b[36mServer.fit\u001b[39m\u001b[34m(self, num_rounds, timeout)\u001b[39m\n\u001b[32m    113\u001b[39m log(INFO, \u001b[33m\"\u001b[39m\u001b[33m[ROUND \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[33m]\u001b[39m\u001b[33m\"\u001b[39m, current_round)\n\u001b[32m    114\u001b[39m \u001b[38;5;66;03m# Train model and replace previous global model\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m115\u001b[39m res_fit = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mfit_round\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    116\u001b[39m \u001b[43m    \u001b[49m\u001b[43mserver_round\u001b[49m\u001b[43m=\u001b[49m\u001b[43mcurrent_round\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    117\u001b[39m \u001b[43m    \u001b[49m\u001b[43mtimeout\u001b[49m\u001b[43m=\u001b[49m\u001b[43mtimeout\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    118\u001b[39m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    119\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m res_fit \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m    120\u001b[39m     parameters_prime, fit_metrics, _ = res_fit  \u001b[38;5;66;03m# fit_metrics_aggregated\u001b[39;00m\n",
       "\u001b[36mFile \u001b[39m\u001b[32m~/openmined/flwr/.venv/lib/python3.12/site-packages/flwr/server/server.py:217\u001b[39m, in \u001b[36mServer.fit_round\u001b[39m\u001b[34m(self, server_round, timeout)\u001b[39m\n\u001b[32m    215\u001b[39m \u001b[38;5;250m\u001b[39m\u001b[33;03m\"\"\"Perform a single round of federated averaging.\"\"\"\u001b[39;00m\n\u001b[32m    216\u001b[39m \u001b[38;5;66;03m# Get clients and their respective instructions from strategy\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m217\u001b[39m client_instructions = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mstrategy\u001b[49m\u001b[43m.\u001b[49m\u001b[43mconfigure_fit\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    218\u001b[39m \u001b[43m    \u001b[49m\u001b[43mserver_round\u001b[49m\u001b[43m=\u001b[49m\u001b[43mserver_round\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    219\u001b[39m \u001b[43m    \u001b[49m\u001b[43mparameters\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mparameters\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    220\u001b[39m \u001b[43m    \u001b[49m\u001b[43mclient_manager\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_client_manager\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    221\u001b[39m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    223\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m client_instructions:\n\u001b[32m    224\u001b[39m     log(INFO, \u001b[33m\"\u001b[39m\u001b[33mconfigure_fit: no clients selected, cancel\u001b[39m\u001b[33m\"\u001b[39m)\n",
@@ -146,7 +174,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
