Running pytorch quickstart example with syft notebook
Co-authored-by: rasswanth-s <43314053+rasswanth-s@users.noreply.github.com>

--- a/notebooks/pytorch-example.ipynb
+++ b/notebooks/pytorch-example.ipynb
@@ -22,17 +22,54 @@
     "num-server-rounds = 3\n",
     "fraction-fit = 0.5\n",
     "local-epochs = 1\n",
-    "partition-id = 0    # quick hack for now\n",
+    "partition-id = 0    # we need to replace with actual syftbox datasets / data loader\n",
     "num-partitions = 1\n",
     "```\n",
     "\n",
-    "and append at the end\n",
+    "and append at the end syft specific configs (the aggregator and the clients)\n",
     "\n",
     "```\n",
     "[tool.syft_flwr]\n",
     "datasites = [\"b@openmined.org\", \"c@openmined.org\" ]\n",
     "aggregator = \"a@openmined.org\"\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Start Aggregator app\n",
+    "```sh\n",
+    "python -m src.syft_flwr.runner --flower-toml-path \"{{ flower-toml-path }}\" --sb-conf-path \"{{ sb-conf-path }}\" --aggregator\n",
+    "```\n",
+    "2. Start Client\n",
+    "```sh\n",
+    "python -m src.syft_flwr.runner --flower-toml-path \"{{ flower-toml-path }}\" --sb-conf-path \"{{ sb-conf-path }}\" --client\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We also have `just` commands for brevity\n",
+    "1. Start Aggregator app\n",
+    "```sh\n",
+    "just rss <flower-toml-path> <aggregator_syftbox_conf_path>\n",
+    "```\n",
+    "\n",
+    "2. Start Client of B\n",
+    "```sh\n",
+    "just rcs <flower-toml-path> <fl_client_syftbox_conf_path>\n",
+    "```\n",
+    "\n",
+    "3. Start Client of C:\n",
+    "```sh\n",
+    "just rcs <flower-toml-path> <fl_client_syftbox_conf_path>\n",
+    "```\n",
+    "\n",
+    "Also make sure that the syftbox clients for the aggregator and fl clients are running (`just rs`, `just rc a`, `just rc b`, `just rc c` in `syftbox`)"
    ]
   },
   {
