Add Data owner and Data Scientist mock notebook Co-authored-by: Khoa Nguyen <khoaguin@users.noreply.github.com>

--- a/notebooks/DS-RDS.ipynb
+++ b/notebooks/DS-RDS.ipynb
@@ -6,9 +6,14 @@
    "metadata": {},
    "source": [
     "Questions:\n",
-    "1. \n",
+    "1. Currently in the flow of RDS, is that  Data owner runs the approved job code , the look at the final result and then shares it with the data owner. In the case of Flower FL, we need to share the intermediate results with the server, do we even need to have a intermediate result approval flow, we need to plan on how this work for Flower.\n",
     "\n",
-    "Engineering Questions:\n"
+    "Engineering Questions:\n",
+    "1. How do we submit a folder a code to the jobs?\n",
+    "    Thoughts: The RDS code submissions interface has the ability to submit code as a folder, but currenlty only file works, we would need to modify\n",
+    "    some parts of User Code Service to allow submission of code as a folder along with specifying an entrypoint\n",
+    "2. How do we mount the RPC Folder to the Docker Runner:\n",
+    "    Since in our case, the flower training is a continuous iterative process, where the client needs to send intermediate messages to the server, we would need to mount the rpc dir to the docker container , so that the client can send intermediate messages to the server\n"
    ]
   },
   {
@@ -78,12 +83,52 @@
    "id": "7cd39a40-a916-4b3b-bc19-eb2ce8186ef8",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "job = ds_client.jobs.submit(user_code_path=\"./med-mnist/main.py\", dataset_name=dataset.name)\n",
+    "job.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# job = ds_client.jobs.submit(user_code_path=\"<file|folder>\",\n",
+    "#                             entrypoint=\"./med-mnist/main.py\",\n",
+    "#                              dataset_name=dataset.name)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "job = ds_client.jobs.get_all()[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_files = [f for f in job.output_path.glob(\"**/*\") if f.is_file()]\n",
+    "assert len(output_files)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
