update DS notebooks

--- a/notebooks/DS-RDS.ipynb
+++ b/notebooks/DS-RDS.ipynb
@@ -13,7 +13,7 @@
     "    Thoughts: The RDS code submissions interface has the ability to submit code as a folder, but currenlty only file works, we would need to modify\n",
     "    some parts of User Code Service to allow submission of code as a folder along with specifying an entrypoint\n",
     "2. How do we mount the RPC Folder to the Docker Runner:\n",
-    "    Since in our case, the flower training is a continuous iterative process, where the client needs to send intermediate messages to the server, we would need to mount the rpc dir to the docker container , so that the client can send intermediate messages to the server\n"
+    "    Since in our case, the flower training is a continuous iterative process, where the client needs to send intermediate messages to the server, we would need to mount the rpc dir to the docker container , so that the client can send intermediate messages to the server. We would need to plan out the same.\n"
    ]
   },
   {
