fix syftbox run server and lint

--- a/notebooks/DS-RDS.ipynb
+++ b/notebooks/DS-RDS.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fb31e980-a4ec-4b33-a690-03c669a469d2",
+   "id": "0",
    "metadata": {},
    "source": [
     "Questions:\n",
@@ -18,31 +18,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "1c6979d6-74dd-4b84-bfac-ea61dbaa9a5e",
+   "execution_count": null,
+   "id": "1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m\u001b[1m\n",
-      "🔨 Creating Flower App med-mnist...\u001b[0m\n",
-      "\u001b[32m\u001b[1m🎊 Flower App creation successful.\n",
-      "\n",
-      "To run your Flower App, use the following command:\n",
-      "\n",
-      "\u001b[0m\u001b[96m\u001b[1m\tflwr run med-mnist\n",
-      "\n",
-      "\u001b[0m\u001b[32m\u001b[1mIf you haven't installed all dependencies yet, follow these steps:\n",
-      "\n",
-      "\u001b[0m\u001b[96m\u001b[1m\tcd med-mnist\n",
-      "\tpip install -e .\n",
-      "\tflwr run .\n",
-      "\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!flwr new med-mnist --framework PyTorch --username ds@openmined.org"
    ]
@@ -50,17 +29,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47f556b4-6914-4d95-be36-e8319c02f29d",
+   "id": "2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from syft_rds as sy"
+    "import syft_rds as sy"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1c9c101-d9c2-4d2c-9751-b31fe8d5e448",
+   "id": "3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14db1e02-ae6a-4ee8-bd8f-cd80a2f0b35a",
+   "id": "4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7cd39a40-a916-4b3b-bc19-eb2ce8186ef8",
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,6 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,6 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,6 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,6 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": []
