--- a/notebooks/DS-RDS.ipynb
+++ b/notebooks/DS-RDS.ipynb
@@ -63,7 +63,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "job = ds_client.jobs.submit(user_code_path=\"./med-mnist/main.py\", dataset_name=dataset.name)\n",
+    "job = ds_client.jobs.submit(\n",
+    "    user_code_path=\"./med-mnist/main.py\", dataset_name=dataset.name\n",
+    ")\n",
     "job.describe()"
    ]
   },
