Revert "`syft_flwr` typer CLI"

--- a/notebooks/DO-RDS.ipynb
+++ b/notebooks/DO-RDS.ipynb
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res_job = do_client.run_private(jobs[0])"
+    "res_job = do_client.run_private(job)"
    ]
   },
   {
