remove main.py from bootstrapping

--- a/notebooks/dataset_loading/do1.ipynb
+++ b/notebooks/dataset_loading/do1.ipynb
@@ -130,7 +130,7 @@
    "metadata": {},
    "source": [
     "## Run syft_flwr simulation\n",
-    "This can be run after the DS bootstrap the `flwr` project (has the `main.py`)"
+    "This can be run after the DS bootstrap the `flwr` project in the `ds.ipynb` notebook"
    ]
   },
   {
