--- a/notebooks/dataset_loading/do2.ipynb
+++ b/notebooks/dataset_loading/do2.ipynb
@@ -120,7 +120,7 @@
    "metadata": {},
    "source": [
     "## Run syft_flwr simulation\n",
-    "This can be run after the DS bootstrap the `flwr` project"
+    "This can be run after the DS bootstrap the `flwr` project in the `ds.ipynb` notebook"
    ]
   },
   {
