dataset loading notebooks work with `quickstart-pytorch`

--- a/notebooks/dataset_loading/do2.ipynb
+++ b/notebooks/dataset_loading/do2.ipynb
@@ -25,8 +25,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# EXAMPLE = \"embedded-devices\"\n",
+    "EXAMPLE = \"quickstart-pytorch\"\n",
+    "\n",
+    "if EXAMPLE == \"embedded-devices\":\n",
+    "    SYFTBOX_DATASET_NAME = \"fashionmnist\"\n",
+    "elif EXAMPLE == \"quickstart-pytorch\":\n",
+    "    SYFTBOX_DATASET_NAME = \"cifar10\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "DO = \"rasswanth@openmined.org\"\n",
-    "DATASET_NAME = \"fashionmnist_part_2\"\n",
+    "DATASET_NAME = f\"{SYFTBOX_DATASET_NAME}_part_2\"\n",
     "\n",
     "!just dump-sim-config {DO}"
    ]
@@ -38,7 +53,7 @@
    "outputs": [],
    "source": [
     "PROJECT_DIR = Path(os.getcwd()).parent.parent.absolute()\n",
-    "FLWR_PROJECT_PATH = PROJECT_DIR / \"examples\" / \"embedded-devices\"\n",
+    "FLWR_PROJECT_PATH = PROJECT_DIR / \"examples\" / EXAMPLE\n",
     "SIM_DIR = PROJECT_DIR / \".sim\"\n",
     "CONFIG_DIR = SIM_DIR / \".config\"\n",
     "\n",
@@ -80,7 +95,6 @@
     "DATASET_MOCK_PATH = FLWR_PROJECT_PATH / \"datasets\" / DATASET_NAME\n",
     "README_PATH = FLWR_PROJECT_PATH / \"README.md\"\n",
     "\n",
-    "SYFTBOX_DATASET_NAME = \"fashionmnist\"\n",
     "print(f\"DO {DO} uploading dataset {SYFTBOX_DATASET_NAME}\")\n",
     "\n",
     "try:\n",
@@ -130,7 +144,12 @@
    "outputs": [],
    "source": [
     "if (FLWR_PROJECT_PATH / \"main.py\").exists():\n",
-    "    !just run-sim-client {flwr_project_path} {DO} {mock_path}"
+    "    !just run-sim-client {flwr_project_path} {DO} {mock_path}\n",
+    "else:\n",
+    "    print(\"main.py does not exist in the project\")\n",
+    "    print(\n",
+    "        \"Please wait for the DS to bootstrap the project and then come back to run this cell\"\n",
+    "    )"
    ]
   },
   {
