--- a/notebooks/dataset_loading/ds.ipynb
+++ b/notebooks/dataset_loading/ds.ipynb
@@ -31,8 +31,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# EXAMPLE = \"embedded-devices\"\n",
+    "EXAMPLE = \"quickstart-pytorch\"\n",
+    "\n",
+    "if EXAMPLE == \"embedded-devices\":\n",
+    "    SYFTBOX_DATASET_NAME = \"fashionmnist\"\n",
+    "elif EXAMPLE == \"quickstart-pytorch\":\n",
+    "    SYFTBOX_DATASET_NAME = \"cifar10\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "PROJECT_DIR = Path(os.getcwd()).parent.parent.absolute()\n",
-    "FLWR_PROJECT_PATH = PROJECT_DIR / \"examples\" / \"embedded-devices\"\n",
+    "FLWR_PROJECT_PATH = PROJECT_DIR / \"examples\" / EXAMPLE\n",
     "SIM_DIR = PROJECT_DIR / \".sim\"\n",
     "CONFIG_DIR = SIM_DIR / \".config\"\n",
     "\n",
@@ -66,8 +81,7 @@
    "source": [
     "datasites = [do_client_1, do_client_2]\n",
     "\n",
-    "DATASET_NAME = \"fashionmnist\"\n",
-    "dataset1 = do_client_1.dataset.get(name=DATASET_NAME)\n",
+    "dataset1 = do_client_1.dataset.get(name=SYFTBOX_DATASET_NAME)\n",
     "dataset1.describe()"
    ]
   },
@@ -77,7 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset2 = do_client_2.dataset.get(name=DATASET_NAME)\n",
+    "dataset2 = do_client_2.dataset.get(name=SYFTBOX_DATASET_NAME)\n",
     "dataset2.describe()"
    ]
   },
@@ -94,9 +108,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "flwr_project_path = str(FLWR_PROJECT_PATH)\n",
-    "\n",
-    "print(flwr_project_path)"
+    "try:\n",
+    "    syft_flwr.bootstrap(FLWR_PROJECT_PATH, aggregator=DS, datasites=[DO1, DO2])\n",
+    "    print(\"Project bootstrapped successfully\")\n",
+    "except Exception as e:\n",
+    "    print(e)"
    ]
   },
   {
@@ -105,16 +121,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!syft_flwr bootstrap {flwr_project_path} -a {DS} -d {DO1} -d {DO2}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!just run-sim-server {flwr_project_path} {DS}"
+    "!just run-sim-server {str(FLWR_PROJECT_PATH)} {DS}"
    ]
   },
   {
@@ -133,7 +140,8 @@
     "syft_flwr.run_simulation(\n",
     "    path=FLWR_PROJECT_PATH,\n",
     "    mock_paths=[\n",
-    "        do_client.datasets.get(name=DATASET_NAME).mock_path for do_client in datasites\n",
+    "        do_client.datasets.get(name=SYFTBOX_DATASET_NAME).mock_path\n",
+    "        for do_client in datasites\n",
     "    ],\n",
     "    num_datasites=len(datasites),\n",
     ")"
