move generating example datasets to `utils.py`. remove `generate_dataset.py` for quickstart-pytorch

--- a/notebooks/dataset_loading/do1.ipynb
+++ b/notebooks/dataset_loading/do1.ipynb
@@ -9,7 +9,65 @@
     "import os\n",
     "from pathlib import Path\n",
     "\n",
-    "import syft_rds as sy"
+    "import syft_rds as sy\n",
+    "\n",
+    "import syft_flwr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# reset the simulation folder\n",
+    "!just reset-sim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "EXAMPLE = \"embedded-devices\"\n",
+    "# EXAMPLE = \"quickstart-pytorch\"\n",
+    "\n",
+    "PROJECT_DIR = Path(os.getcwd()).parent.parent.absolute()\n",
+    "DATASET_DIR = Path(\"./datasets/\").expanduser().absolute()\n",
+    "FLWR_PROJECT_PATH = PROJECT_DIR / \"examples\" / EXAMPLE\n",
+    "SIM_DIR = PROJECT_DIR / \".sim\"\n",
+    "CONFIG_DIR = SIM_DIR / \".config\"\n",
+    "\n",
+    "print(f\"{PROJECT_DIR = }\")\n",
+    "print(f\"{DATASET_DIR = }\")\n",
+    "print(f\"{FLWR_PROJECT_PATH = }\")\n",
+    "print(f\"{SIM_DIR = }\")\n",
+    "print(f\"{CONFIG_DIR = }\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create a local dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if EXAMPLE == \"embedded-devices\":\n",
+    "    SYFTBOX_DATASET_NAME = \"fashionmnist\"\n",
+    "\n",
+    "elif EXAMPLE == \"quickstart-pytorch\":\n",
+    "    SYFTBOX_DATASET_NAME = \"cifar10\"\n",
+    "\n",
+    "syft_flwr.utils.save_dataset_to_disk(\n",
+    "    dataset_name=SYFTBOX_DATASET_NAME, dataset_dir=DATASET_DIR, num_partitions=2\n",
+    ")"
    ]
   },
   {
@@ -25,32 +83,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!just reset-sim"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# EXAMPLE = \"embedded-devices\"\n",
-    "EXAMPLE = \"quickstart-pytorch\"\n",
-    "\n",
-    "if EXAMPLE == \"embedded-devices\":\n",
-    "    SYFTBOX_DATASET_NAME = \"fashionmnist\"\n",
-    "elif EXAMPLE == \"quickstart-pytorch\":\n",
-    "    SYFTBOX_DATASET_NAME = \"cifar10\"\n",
-    "\n",
-    "!just setup {EXAMPLE}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "DO = \"yash@openmined.org\"\n",
     "DATASET_NAME = f\"{SYFTBOX_DATASET_NAME}_part_1\"\n",
     "\n",
@@ -58,20 +90,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "PROJECT_DIR = Path(os.getcwd()).parent.parent.absolute()\n",
-    "FLWR_PROJECT_PATH = PROJECT_DIR / \"examples\" / EXAMPLE\n",
-    "SIM_DIR = PROJECT_DIR / \".sim\"\n",
-    "CONFIG_DIR = SIM_DIR / \".config\"\n",
-    "\n",
-    "print(f\"{PROJECT_DIR = }\")\n",
-    "print(f\"{FLWR_PROJECT_PATH = }\")\n",
-    "print(f\"{SIM_DIR = }\")\n",
-    "print(f\"{CONFIG_DIR = }\")"
+    "Print out the config"
    ]
   },
   {
@@ -102,23 +124,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATASET_PRIVATE_PATH = FLWR_PROJECT_PATH / \"datasets\" / DATASET_NAME\n",
-    "DATASET_MOCK_PATH = FLWR_PROJECT_PATH / \"datasets\" / DATASET_NAME\n",
+    "DATASET_PRIVATE_PATH = DATASET_DIR / SYFTBOX_DATASET_NAME / DATASET_NAME\n",
+    "DATASET_MOCK_PATH = DATASET_DIR / SYFTBOX_DATASET_NAME / DATASET_NAME\n",
     "README_PATH = FLWR_PROJECT_PATH / \"README.md\"\n",
-    "\n",
-    "print(f\"DO {DO} uploading dataset {SYFTBOX_DATASET_NAME}\")\n",
     "\n",
     "try:\n",
     "    dataset = do.dataset.create(\n",
     "        name=SYFTBOX_DATASET_NAME,\n",
-    "        summary=\"Partitioned FashionMNIST dataset.\",\n",
+    "        summary=f\"Partitioned {SYFTBOX_DATASET_NAME} dataset.\",\n",
     "        description_path=README_PATH,\n",
     "        path=DATASET_PRIVATE_PATH,\n",
     "        mock_path=DATASET_MOCK_PATH,\n",
     "    )\n",
     "    dataset.describe()\n",
     "except Exception as e:\n",
-    "    print(e)"
+    "    print(f\"Error: {e}\")"
    ]
   },
   {
