--- a/notebooks/dataset_loading/do2.ipynb
+++ b/notebooks/dataset_loading/do2.ipynb
@@ -25,8 +25,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# EXAMPLE = \"embedded-devices\"\n",
-    "EXAMPLE = \"quickstart-pytorch\"\n",
+    "EXAMPLE = \"embedded-devices\"\n",
+    "# EXAMPLE = \"quickstart-pytorch\"\n",
+    "PROJECT_DIR = Path(os.getcwd()).parent.parent.absolute()\n",
+    "DATASET_DIR = Path(\"./datasets/\").expanduser().absolute()\n",
+    "FLWR_PROJECT_PATH = PROJECT_DIR / \"examples\" / EXAMPLE\n",
+    "SIM_DIR = PROJECT_DIR / \".sim\"\n",
+    "CONFIG_DIR = SIM_DIR / \".config\"\n",
+    "\n",
+    "print(f\"{PROJECT_DIR = }\")\n",
+    "print(f\"{DATASET_DIR = }\")\n",
+    "print(f\"{FLWR_PROJECT_PATH = }\")\n",
+    "print(f\"{SIM_DIR = }\")\n",
+    "print(f\"{CONFIG_DIR = }\")\n",
     "\n",
     "if EXAMPLE == \"embedded-devices\":\n",
     "    SYFTBOX_DATASET_NAME = \"fashionmnist\"\n",
@@ -44,23 +55,6 @@
     "DATASET_NAME = f\"{SYFTBOX_DATASET_NAME}_part_2\"\n",
     "\n",
     "!just dump-sim-config {DO}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "PROJECT_DIR = Path(os.getcwd()).parent.parent.absolute()\n",
-    "FLWR_PROJECT_PATH = PROJECT_DIR / \"examples\" / EXAMPLE\n",
-    "SIM_DIR = PROJECT_DIR / \".sim\"\n",
-    "CONFIG_DIR = SIM_DIR / \".config\"\n",
-    "\n",
-    "print(f\"{PROJECT_DIR = }\")\n",
-    "print(f\"{FLWR_PROJECT_PATH = }\")\n",
-    "print(f\"{SIM_DIR = }\")\n",
-    "print(f\"{CONFIG_DIR = }\")"
    ]
   },
   {
@@ -91,16 +85,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATASET_PRIVATE_PATH = FLWR_PROJECT_PATH / \"datasets\" / DATASET_NAME\n",
-    "DATASET_MOCK_PATH = FLWR_PROJECT_PATH / \"datasets\" / DATASET_NAME\n",
+    "DATASET_PRIVATE_PATH = DATASET_DIR / SYFTBOX_DATASET_NAME / DATASET_NAME\n",
+    "DATASET_MOCK_PATH = DATASET_DIR / SYFTBOX_DATASET_NAME / DATASET_NAME\n",
     "README_PATH = FLWR_PROJECT_PATH / \"README.md\"\n",
-    "\n",
-    "print(f\"DO {DO} uploading dataset {SYFTBOX_DATASET_NAME}\")\n",
     "\n",
     "try:\n",
     "    dataset = do.dataset.create(\n",
     "        name=SYFTBOX_DATASET_NAME,\n",
-    "        summary=\"Partitioned FashionMNIST dataset.\",\n",
+    "        summary=f\"Partitioned {SYFTBOX_DATASET_NAME} dataset.\",\n",
     "        description_path=README_PATH,\n",
     "        path=DATASET_PRIVATE_PATH,\n",
     "        mock_path=DATASET_MOCK_PATH,\n",
