--- a/notebooks/dataset_loading/ds.ipynb
+++ b/notebooks/dataset_loading/ds.ipynb
@@ -20,9 +20,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DS = \"khoa@openmined.org\"\n",
+    "EXAMPLE = \"embedded-devices\"\n",
+    "# EXAMPLE = \"quickstart-pytorch\"\n",
     "\n",
-    "!just dump-sim-config {DS}"
+    "if EXAMPLE == \"embedded-devices\":\n",
+    "    SYFTBOX_DATASET_NAME = \"fashionmnist\"\n",
+    "elif EXAMPLE == \"quickstart-pytorch\":\n",
+    "    SYFTBOX_DATASET_NAME = \"cifar10\""
    ]
   },
   {
@@ -31,13 +35,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# EXAMPLE = \"embedded-devices\"\n",
-    "EXAMPLE = \"quickstart-pytorch\"\n",
+    "DS = \"khoa@openmined.org\"\n",
     "\n",
-    "if EXAMPLE == \"embedded-devices\":\n",
-    "    SYFTBOX_DATASET_NAME = \"fashionmnist\"\n",
-    "elif EXAMPLE == \"quickstart-pytorch\":\n",
-    "    SYFTBOX_DATASET_NAME = \"cifar10\""
+    "!just dump-sim-config {DS}"
    ]
   },
   {
