run dataset loading notebooks with upgraded deps

--- a/notebooks/dataset_loading/do1.ipynb
+++ b/notebooks/dataset_loading/do1.ipynb
@@ -30,8 +30,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# EXAMPLE = \"embedded-devices\"\n",
-    "EXAMPLE = \"quickstart-pytorch\"\n",
+    "EXAMPLE = \"embedded-devices\"\n",
+    "# EXAMPLE = \"quickstart-pytorch\"\n",
     "\n",
     "PROJECT_DIR = Path(os.getcwd()).parent.parent.absolute()\n",
     "DATASET_DIR = Path(\"./datasets/\").expanduser().absolute()\n",
