--- a/notebooks/dataset_loading/ds.ipynb
+++ b/notebooks/dataset_loading/ds.ipynb
@@ -20,8 +20,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# EXAMPLE = \"embedded-devices\"\n",
-    "EXAMPLE = \"quickstart-pytorch\"\n",
+    "EXAMPLE = \"embedded-devices\"\n",
+    "# EXAMPLE = \"quickstart-pytorch\"\n",
     "\n",
     "if EXAMPLE == \"embedded-devices\":\n",
     "    SYFTBOX_DATASET_NAME = \"fashionmnist\"\n",
