clean up notebooks

--- a/notebooks/dataset_loading/do1.ipynb
+++ b/notebooks/dataset_loading/do1.ipynb
@@ -29,16 +29,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!rm -rf .server .ipynb_checkpoints/"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# reset the simulation folder\n",
+    "!pwd\n",
+    "!rm -rf .server .ipynb_checkpoints/\n",
     "!just reset-sim"
    ]
   },
@@ -76,6 +68,13 @@
     "\n",
     "DO_CONFIG = CONFIG_DIR / f\"{DO}.json\"\n",
     "!cat $DO_CONFIG"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Local client `SyftEvents` server"
    ]
   },
   {
@@ -219,32 +218,6 @@
    "outputs": [],
    "source": [
     "event_server.stop()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Run syft_flwr simulation\n",
-    "This can be run after the DS bootstrap the `flwr` project in the `ds.ipynb` notebook"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# flwr_project_path = str(FLWR_PROJECT_PATH)\n",
-    "# mock_path = str(do.dataset.get(name=SYFTBOX_DATASET_NAME).get_mock_path())\n",
-    "\n",
-    "# if (FLWR_PROJECT_PATH / \"main.py\").exists():\n",
-    "#     !just run-sim-client {flwr_project_path} {DO} {mock_path}\n",
-    "# else:\n",
-    "#     print(\"main.py does not exist in the project\")\n",
-    "#     print(\n",
-    "#         \"Please wait for the DS to bootstrap the project and then come back to run this cell\"\n",
-    "#     )"
    ]
   },
   {
