--- a/notebooks/dataset_loading/do2.ipynb
+++ b/notebooks/dataset_loading/do2.ipynb
@@ -57,6 +57,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Local client `SyftEvents` server"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -65,6 +72,13 @@
     "do_syftbox_client = Client.load(DO_CONFIG)\n",
     "event_server = create_app(client=do_syftbox_client)\n",
     "event_server.start()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## DO creates a local dataset"
    ]
   },
   {
@@ -181,32 +195,6 @@
    "outputs": [],
    "source": [
     "event_server.stop()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Run syft_flwr simulation\n",
-    "This can be run after the DS bootstrap the `flwr` project in the `ds.ipynb` notebook"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "flwr_project_path = str(FLWR_PROJECT_PATH)\n",
-    "mock_path = str(do.dataset.get(name=SYFTBOX_DATASET_NAME).get_mock_path())\n",
-    "\n",
-    "if (FLWR_PROJECT_PATH / \"main.py\").exists():\n",
-    "    !just run-sim-client {flwr_project_path} {DO} {mock_path}\n",
-    "else:\n",
-    "    print(\"main.py does not exist in the project\")\n",
-    "    print(\n",
-    "        \"Please wait for the DS to bootstrap the project and then come back to run this cell\"\n",
-    "    )"
    ]
   },
   {
