--- a/notebooks/RDS-Demo/do1.ipynb
+++ b/notebooks/RDS-Demo/do1.ipynb
@@ -40,7 +40,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Remove Pydantic Warnings\n",
     "do_stack_1 = setup_rds_server(email=\"do1@openmined.org\", key=\"flwr\")"
    ]
   },
@@ -75,30 +74,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: create project with flwr\n",
-    "# !flwr new quickstart-pytorch"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "EXAMPLE = \"quickstart-pytorch\"\n",
+    "FLWR_PROJECT = \"quickstart-pytorch\"\n",
     "SYFTBOX_DATASET_NAME = \"cifar10\"\n",
     "\n",
-    "\n",
-    "PROJECT_DIR = Path(os.getcwd()).parent.parent.absolute()\n",
     "DATASET_DIR = Path(\"./datasets/\").expanduser().absolute()\n",
-    "FLWR_PROJECT_PATH = PROJECT_DIR / \"examples\" / EXAMPLE\n",
-    "\n",
+    "FLWR_PROJECT_PATH = Path(f\"{FLWR_PROJECT}\")\n",
     "\n",
     "DATASET_NAME = f\"{SYFTBOX_DATASET_NAME}_part_1\"\n",
     "\n",
-    "print(f\"{PROJECT_DIR = }\")\n",
     "print(f\"{DATASET_DIR = }\")\n",
-    "print(f\"{FLWR_PROJECT_PATH = }\")"
+    "print(f\"{FLWR_PROJECT_PATH = }\")\n",
+    "print(f\"{DATASET_NAME = }\")"
    ]
   },
   {
@@ -254,7 +240,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
