--- a/notebooks/RDS-Demo/ds.ipynb
+++ b/notebooks/RDS-Demo/ds.ipynb
@@ -18,6 +18,74 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Step 1: Create Flower Project"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!flwr new quickstart-pytorch \\\n",
+    "    --framework PyTorch \\\n",
+    "    --username syft_flwr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 1.1: Run Simulation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!flwr run quickstart-pytorch/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 1.2 Customize Data Loaders"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We modify the quickstart-pytorch example\n",
+    "- To load data from SyftBox\n",
+    "- To save model weights after training\n",
+    "\n",
+    "using template.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 1.3 Re-Run Simulation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!flwr run quickstart-pytorch"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Step 1: Setup RDS Server"
    ]
   },
@@ -48,14 +116,10 @@
    "outputs": [],
    "source": [
     "do_client_1 = ds_stack.init_session(host=DO1)\n",
-    "assert do_client_1.host == DO1\n",
-    "assert do_client_1.email == DS\n",
-    "assert not do_client_1.is_admin\n",
+    "print(\"Logged into: \", do_client_1.host)\n",
     "\n",
     "do_client_2 = ds_stack.init_session(host=DO2)\n",
-    "assert do_client_2.host == DO2\n",
-    "assert do_client_2.email == DS\n",
-    "assert not do_client_2.is_admin\n",
+    "print(\"Logged into: \", do_client_2.host)\n",
     "\n",
     "datasites = [do_client_1, do_client_2]"
    ]
@@ -73,11 +137,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "EXAMPLE = \"quickstart-pytorch\"\n",
+    "FLWR_PROJECT = \"quickstart-pytorch\"\n",
     "SYFTBOX_DATASET_NAME = \"cifar10\"\n",
     "\n",
-    "PROJECT_DIR = Path(os.getcwd()).parent.parent.absolute()\n",
-    "FLWR_PROJECT_PATH = PROJECT_DIR / \"examples\" / EXAMPLE"
+    "\n",
+    "FLWR_PROJECT_PATH = Path(f\"{FLWR_PROJECT}\")"
    ]
   },
   {
@@ -195,7 +259,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
