update demo notebooks

--- a/notebooks/RDS-Demo/do1.ipynb
+++ b/notebooks/RDS-Demo/do1.ipynb
@@ -58,6 +58,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "do_client_1.is_admin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "do_client_1.datasets"
    ]
   },
@@ -222,6 +231,13 @@
    "source": [
     "do_stack_1.stop()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
