--- a/notebooks/RDS-Demo/do2.ipynb
+++ b/notebooks/RDS-Demo/do2.ipynb
@@ -42,6 +42,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "do_client_2.is_admin"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -196,6 +205,13 @@
    "source": [
     "do_stack_2.stop()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
