--- a/notebooks/RDS-Demo/ds.ipynb
+++ b/notebooks/RDS-Demo/ds.ipynb
@@ -119,9 +119,25 @@
     "print(\"Logged into: \", do_client_1.host)\n",
     "\n",
     "do_client_2 = ds_stack.init_session(host=DO2)\n",
-    "print(\"Logged into: \", do_client_2.host)\n",
-    "\n",
-    "datasites = [do_client_1, do_client_2]"
+    "print(\"Logged into: \", do_client_2.host)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "do_client_1.is_admin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "do_client_2.is_admin"
    ]
   },
   {
@@ -177,6 +193,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "FLWR_PROJECT_PATH"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "try:\n",
     "    syft_flwr.bootstrap(FLWR_PROJECT_PATH, aggregator=DS, datasites=[DO1, DO2])\n",
     "    print(\"Bootstrapped project successfully ✅\")\n",
@@ -198,6 +223,7 @@
    "outputs": [],
    "source": [
     "# Job submission\n",
+    "datasites = [do_client_1, do_client_2]\n",
     "\n",
     "for client in datasites:\n",
     "    job = client.jobs.submit(\n",
