Modified step names

--- a/notebooks/RDS-Demo/ds.ipynb
+++ b/notebooks/RDS-Demo/ds.ipynb
@@ -86,7 +86,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 1: Setup RDS Server"
+    "## Step 2: Setup RDS Server"
    ]
   },
   {
@@ -144,7 +144,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 2: Explore Datasets"
+    "## Step 3: Explore Datasets"
    ]
   },
   {
@@ -184,7 +184,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 3: Bootstrap Project"
+    "## Step 4: Bootstrap Project"
    ]
   },
   {
@@ -213,7 +213,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 4: DS Submits Jobs"
+    "## Step 5: DS Submits Jobs"
    ]
   },
   {
@@ -248,7 +248,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Run simulation using the `main.py` file directly"
+    "## Step 6: DS starts Aggregator"
    ]
   },
   {
@@ -271,7 +271,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
