--- a/notebooks/RDS-Demo/do2.ipynb
+++ b/notebooks/RDS-Demo/do2.ipynb
@@ -12,7 +12,6 @@
     "\n",
     "from syft_rds.orchestra import setup_rds_server\n",
     "\n",
-    "# TODO: Remove warning from pydantic\n",
     "import syft_flwr"
    ]
   },
@@ -216,7 +215,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
