restructure notebooks with images and import positions

--- a/notebooks/RDS-Demo/do1.ipynb
+++ b/notebooks/RDS-Demo/do1.ipynb
@@ -8,11 +8,7 @@
    "source": [
     "# stdlib\n",
     "import os\n",
-    "from pathlib import Path\n",
-    "\n",
-    "from syft_rds.orchestra import setup_rds_server\n",
-    "\n",
-    "import syft_flwr"
+    "from pathlib import Path"
    ]
   },
   {
@@ -43,6 +39,15 @@
    "metadata": {},
    "source": [
     "![Demo Slides-images-0.jpg](attachment:acc2a42e-03ec-4b1b-b7f5-0b3da111cbcd.jpg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from syft_rds.orchestra import setup_rds_server"
    ]
   },
   {
@@ -113,6 +118,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import syft_flwr\n",
+    "\n",
     "syft_flwr.utils.save_dataset_to_disk(\n",
     "    dataset_name=SYFTBOX_DATASET_NAME, dataset_dir=DATASET_DIR, num_partitions=2\n",
     ")"
@@ -167,13 +174,6 @@
    "outputs": [],
    "source": [
     "do_client_1.datasets"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now DO can wait for the DS to submit jobs"
    ]
   },
   {
