--- a/notebooks/RDS-Demo/ds.ipynb
+++ b/notebooks/RDS-Demo/ds.ipynb
@@ -6,6 +6,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!uv pip install \"torch==2.5.1\" \"torchvision==0.20.1\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import os\n",
     "from pathlib import Path"
    ]
