--- a/notebooks/RDS-Demo/do1.ipynb
+++ b/notebooks/RDS-Demo/do1.ipynb
@@ -1,25 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# stdlib\n",
-    "import os\n",
-    "from pathlib import Path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from utils import reset_db\n",
-    "\n",
-    "reset_db(\"flwr\")"
+    "# Data Owner 1 (FL Client 1)"
    ]
   },
   {
@@ -47,7 +32,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from syft_rds.orchestra import setup_rds_server"
+    "from utils import reset_db\n",
+    "\n",
+    "reset_db(\"flwr\")"
    ]
   },
   {
@@ -56,6 +43,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from syft_rds.orchestra import setup_rds_server\n",
+    "\n",
     "do_stack_1 = setup_rds_server(email=\"do1@openmined.org\", key=\"flwr\")"
    ]
   },
@@ -99,6 +88,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from pathlib import Path\n",
+    "\n",
     "FLWR_PROJECT = \"quickstart-pytorch\"\n",
     "SYFTBOX_DATASET_NAME = \"cifar10\"\n",
     "\n",
@@ -262,6 +253,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "\n",
     "os.environ[\"SYFTBOX_CLIENT_CONFIG_PATH\"] = str(do_stack_1.client.config_path)\n",
     "res_job = do_client_1.run_private(job)"
    ]
@@ -306,7 +299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
