--- a/notebooks/RDS-Demo/ds.ipynb
+++ b/notebooks/RDS-Demo/ds.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Data Scientist"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Step 1: Create Flower Project"
    ]
   },
@@ -13,9 +20,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!flwr new quickstart-pytorch \\\n",
-    "    --framework PyTorch \\\n",
-    "    --username syft_flwr"
+    "# !flwr new quickstart-pytorch \\\n",
+    "#     --framework PyTorch \\\n",
+    "#     --username syft_flwr"
    ]
   },
   {
@@ -31,7 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!flwr run quickstart-pytorch/"
+    "# !flwr run quickstart-pytorch/"
    ]
   },
   {
@@ -77,7 +84,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!flwr run quickstart-pytorch"
+    "# !flwr run quickstart-pytorch"
    ]
   },
   {
@@ -294,6 +301,7 @@
    "outputs": [],
    "source": [
     "os.environ[\"SYFTBOX_CLIENT_CONFIG_PATH\"] = str(ds_stack.client.config_path)\n",
+    "os.environ[\"LOGURU_LEVEL\"] = \"DEBUG\"\n",
     "!uv run {str(FLWR_PROJECT_PATH / \"main.py\")} --active"
    ]
   },
@@ -307,7 +315,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
