maintain compatibility with `flwr==1.15.2`

--- a/notebooks/RDS-Demo/ds.ipynb
+++ b/notebooks/RDS-Demo/ds.ipynb
@@ -300,6 +300,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import flwr\n",
+    "\n",
+    "flwr.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "os.environ[\"SYFTBOX_CLIENT_CONFIG_PATH\"] = str(ds_stack.client.config_path)\n",
     "os.environ[\"LOGURU_LEVEL\"] = \"DEBUG\"\n",
     "!uv run {str(FLWR_PROJECT_PATH / \"main.py\")} --active"
