Move utils out of syft flower code add show hidden files option to jupyter args

--- a/notebooks/RDS-Demo/do1.ipynb
+++ b/notebooks/RDS-Demo/do1.ipynb
@@ -118,9 +118,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import syft_flwr\n",
+    "from utils import save_dataset_to_disk\n",
     "\n",
-    "syft_flwr.utils.save_dataset_to_disk(\n",
+    "save_dataset_to_disk(\n",
     "    dataset_name=SYFTBOX_DATASET_NAME, dataset_dir=DATASET_DIR, num_partitions=2\n",
     ")"
    ]
