Refactor DS and DO's e2e notebooks
Co-authored-by: Khoa Duy Nguyen <88959106+khoaguin@users.noreply.github.com>

--- a/notebooks/RDS-Demo-E2E/ds.ipynb
+++ b/notebooks/RDS-Demo-E2E/ds.ipynb
@@ -6,6 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Syft Flwr\n",
+    "# !uv pip install syft-flwr\n",
+    "\n",
+    "# Project Specific Deps\n",
     "!uv pip install \"torch==2.5.1\" \"torchvision==0.20.1\""
    ]
   },
@@ -15,7 +19,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
     "from pathlib import Path"
    ]
   },
@@ -28,30 +31,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m\u001b[1m\n",
-      "🔨 Creating Flower App quickstart-pytorch...\u001b[0m\n",
-      "\u001b[32m\u001b[1m🎊 Flower App creation successful.\n",
-      "\n",
-      "To run your Flower App, use the following command:\n",
-      "\n",
-      "\u001b[0m\u001b[96m\u001b[1m\tflwr run quickstart-pytorch\n",
-      "\n",
-      "\u001b[0m\u001b[32m\u001b[1mIf you haven't installed all dependencies yet, follow these steps:\n",
-      "\n",
-      "\u001b[0m\u001b[96m\u001b[1m\tcd quickstart-pytorch\n",
-      "\tpip install -e .\n",
-      "\tflwr run .\n",
-      "\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!flwr new quickstart-pytorch \\\n",
     "    --framework PyTorch \\\n",
@@ -133,7 +115,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from syft_rds.orchestra import setup_rds_server"
+    "# Run this in a separate terminal\n",
+    "# Setup SyftBox Client\n",
+    "# !syftbox client "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import syft_rds as sy\n",
+    "from syft_core import Client"
    ]
   },
   {
@@ -142,7 +143,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_stack = setup_rds_server(email=\"ds@openmined.org\", key=\"flwr\")"
+    "DO1 = \"<DO1_EMAIL>\"\n",
+    "DO2 = \"<DO2_EMAIL>\"\n",
+    "DS = Client.load().email"
    ]
   },
   {
@@ -151,21 +154,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DO1 = \"do1@openmined.org\"\n",
-    "DO2 = \"do2@openmined.org\"\n",
-    "DS = \"ds@openmined.org\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "do_client_1 = ds_stack.init_session(host=DO1)\n",
+    "do_client_1 = sy.init_session(host=DO1)\n",
     "print(\"Logged into: \", do_client_1.host)\n",
     "\n",
-    "do_client_2 = ds_stack.init_session(host=DO2)\n",
+    "do_client_2 = sy.init_session(host=DO2)\n",
     "print(\"Logged into: \", do_client_2.host)"
    ]
   },
@@ -330,7 +322,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ[\"SYFTBOX_CLIENT_CONFIG_PATH\"] = str(ds_stack.client.config_path)\n",
     "!uv run {str(FLWR_PROJECT_PATH / \"main.py\")} --active"
    ]
   },
