--- a/notebooks/RDS-Demo-E2E/do1.ipynb
+++ b/notebooks/RDS-Demo-E2E/do1.ipynb
@@ -11,17 +11,7 @@
     "\n",
     "# Project Specific Deps\n",
     "# TODO: shift it to be installed based on pyproject.toml received from the DS\n",
-    "!uv pip install \"torch==2.5.1\" \"torchvision==0.20.1\"\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# stdlib\n",
-    "from pathlib import Path"
+    "!uv pip install \"torch==2.5.1\" \"torchvision==0.20.1\""
    ]
   },
   {
@@ -51,7 +41,7 @@
    "source": [
     "# Run this in a separate terminal\n",
     "# Setup SyftBox Client\n",
-    "# !syftbox client "
+    "# !syftbox client"
    ]
   },
   {
@@ -61,7 +51,7 @@
    "outputs": [],
    "source": [
     "# Run RDS Server in a separate terminal\n",
-    "# syft-rds server"
+    "# just run-rds-server"
    ]
   },
   {
@@ -73,7 +63,9 @@
     "import syft_rds as sy\n",
     "from syft_core import Client\n",
     "\n",
-    "do_client_1 = sy.init_session(Client.load().email)"
+    "email = Client.load().email\n",
+    "print(f\"SyftBox client email: {email}\")\n",
+    "do_client_1 = sy.init_session(email)"
    ]
   },
   {
@@ -107,6 +99,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from pathlib import Path\n",
+    "\n",
     "SYFTBOX_DATASET_NAME = \"cifar10\"\n",
     "DATASET_DIR = Path(\"./datasets/\").expanduser().absolute()\n",
     "DATASET_NAME = f\"{SYFTBOX_DATASET_NAME}_part_1\"\n",
@@ -308,7 +302,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
