even smaller `.arrow` for cifar10
Co-authored-by: rasswanth-s <43314053+rasswanth-s@users.noreply.github.com>

--- a/notebooks/RDS-Demo-E2E/do2.ipynb
+++ b/notebooks/RDS-Demo-E2E/do2.ipynb
@@ -14,16 +14,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# stdlib\n",
-    "from pathlib import Path"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -50,7 +40,7 @@
    "source": [
     "# Run this in a separate terminal\n",
     "# Setup SyftBox Client\n",
-    "# !syftbox client "
+    "# !syftbox client"
    ]
   },
   {
@@ -72,7 +62,9 @@
     "import syft_rds as sy\n",
     "from syft_core import Client\n",
     "\n",
-    "do_client_2 = sy.init_session(Client.load().email)"
+    "email = Client.load().email\n",
+    "print(f\"SyftBox client email: {email}\")\n",
+    "do_client_2 = sy.init_session(email)"
    ]
   },
   {
@@ -106,6 +98,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# stdlib\n",
+    "from pathlib import Path\n",
+    "\n",
     "SYFTBOX_DATASET_NAME = \"cifar10\"\n",
     "DATASET_DIR = Path(\"./datasets/\").expanduser().absolute()\n",
     "DATASET_NAME = f\"{SYFTBOX_DATASET_NAME}_part_2\"\n",
@@ -152,6 +147,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from loguru import logger\n",
+    "\n",
     "DATASET_PRIVATE_PATH = DATASET_DIR / SYFTBOX_DATASET_NAME / DATASET_NAME\n",
     "DATASET_MOCK_PATH = DATASET_DIR / SYFTBOX_DATASET_NAME / DATASET_NAME\n",
     "README_PATH = DATASET_DIR / SYFTBOX_DATASET_NAME / \"README.md\"\n",
@@ -166,7 +163,7 @@
     "    )\n",
     "    dataset.describe()\n",
     "except Exception as e:\n",
-    "    print(f\"Error: {e}\")"
+    "    logger.error(f\"Error: {e}\")"
    ]
   },
   {
@@ -308,7 +305,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
