RDS simulation noteobooks fixes

--- a/notebooks/RDS-Demo/ds.ipynb
+++ b/notebooks/RDS-Demo/ds.ipynb
@@ -10,16 +10,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "from pathlib import Path"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -76,18 +66,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We modify the quickstart-pytorch example\n",
+    "We modify the `quickstart-pytorch` example\n",
     "- To load data from SyftBox\n",
     "- To save model weights after training\n",
     "\n",
-    "using template.py"
+    "using `template.py.tpl`"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 1.3 Re-Run Simulation"
+    "### Step 1.3 Re-Run Simulation\n",
+    "Let's check that customizing the Flower code does not break `flwr run`"
    ]
   },
   {
@@ -154,7 +145,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "do_client_1.is_admin"
+    "assert not do_client_1.is_admin"
    ]
   },
   {
@@ -163,7 +154,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "do_client_2.is_admin"
+    "assert not do_client_2.is_admin"
    ]
   },
   {
@@ -179,6 +170,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "from pathlib import Path\n",
+    "\n",
     "FLWR_PROJECT = \"quickstart-pytorch\"\n",
     "SYFTBOX_DATASET_NAME = \"cifar10\"\n",
     "\n",
@@ -235,6 +229,15 @@
     "    print(\"Bootstrapped project successfully ✅\")\n",
     "except Exception as e:\n",
     "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You will see that there are 2 changes that `syft_flwr.bootstrap` does\n",
+    "-  A `main.py` file created under the `quickstart-pytorch` project\n",
+    "- There is a new field named `[tool.syft_flwr]` appended to the `quickstart-pytorch` project's `pyproject.toml` that specifies who are the data owners (datasites) / data scientist (aggregator)"
    ]
   },
   {
@@ -310,6 +313,7 @@
    "outputs": [],
    "source": [
     "os.environ[\"SYFTBOX_CLIENT_CONFIG_PATH\"] = str(ds_stack.client.config_path)\n",
+    "os.environ[\"LOGURU_LEVEL\"] = \"DEBUG\"\n",
     "!uv run {str(FLWR_PROJECT_PATH / \"main.py\")} --active"
    ]
   },
@@ -323,7 +327,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -337,7 +341,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
