--- a/notebooks/RDS-Demo/do1.ipynb
+++ b/notebooks/RDS-Demo/do1.ipynb
@@ -74,7 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "do_client_1.is_admin"
+    "assert do_client_1.is_admin"
    ]
   },
   {
@@ -152,7 +152,7 @@
    "source": [
     "DATASET_PRIVATE_PATH = DATASET_DIR / SYFTBOX_DATASET_NAME / DATASET_NAME\n",
     "DATASET_MOCK_PATH = DATASET_DIR / SYFTBOX_DATASET_NAME / DATASET_NAME\n",
-    "README_PATH = FLWR_PROJECT_PATH / \"README.md\"\n",
+    "README_PATH = DATASET_DIR / SYFTBOX_DATASET_NAME / \"README.md\"\n",
     "\n",
     "try:\n",
     "    dataset = do_client_1.dataset.create(\n",
@@ -292,7 +292,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -306,7 +306,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
