--- a/notebooks/RDS-Demo/ds.ipynb
+++ b/notebooks/RDS-Demo/ds.ipynb
@@ -1,8 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "!uv pip install \"torch==2.5.1\" \"torchvision==0.20.1\""
    ]
@@ -20,9 +22,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !flwr new quickstart-pytorch \\\n",
-    "#     --framework PyTorch \\\n",
-    "#     --username syft_flwr"
+    "!flwr new quickstart-pytorch \\\n",
+    "    --framework PyTorch \\\n",
+    "    --username syft_flwr"
    ]
   },
   {
@@ -38,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !flwr run quickstart-pytorch/"
+    "!flwr run quickstart-pytorch/"
    ]
   },
   {
@@ -85,7 +87,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !flwr run quickstart-pytorch"
+    "!flwr run quickstart-pytorch"
    ]
   },
   {
