updated dataset name

--- a/notebooks/RDS-Demo-tabular/ds.ipynb
+++ b/notebooks/RDS-Demo-tabular/ds.ipynb
@@ -166,7 +166,7 @@
     "from pathlib import Path\n",
     "\n",
     "FLWR_PROJECT = \"fl-tabular\"\n",
-    "SYFTBOX_DATASET_NAME = \"adult-census-income\"\n",
+    "SYFTBOX_DATASET_NAME = \"adult_census_income\"\n",
     "\n",
     "\n",
     "FLWR_PROJECT_PATH = Path(f\"{FLWR_PROJECT}\")"
