fix notebook deps

--- a/notebooks/RDS-Demo-tabular/ds.ipynb
+++ b/notebooks/RDS-Demo-tabular/ds.ipynb
@@ -10,7 +10,7 @@
     "# !uv pip install syft-flwr\n",
     "\n",
     "# Project Specific Deps\n",
-    "!uv pip install \"scikit-learn==1.6.1\""
+    "!uv pip install torch scikit-learn"
    ]
   },
   {
@@ -308,7 +308,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
